--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(confint,coefbounds)
 S3method(print,coefbounds)
 S3method(print,interval_hypothesis)
+export(coefbounds)
 export(interval_hypothesis)
-export(lm_bounds)
 import(foreach)
 importFrom(stats,coef)
