--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: coefbounds
 Title: Nonparametric Bounds for Regression with Interval-Censored Outcomes
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: person("Brenton", "Kenkel", email = "brenton.kenkel@gmail.com", role = c("aut", "cre"))
 Description: Estimates nonparametric bounds on regression parameters when outcome data are interval-censored.  Performs hypothesis tests and calculates confidence regions by bootstrap, following Beresteanu and Molinari (2008).
+URL: https://github.com/brentonk/coefbounds
 Depends:
     R (>= 3.0)
 Imports:
